Update autonomous self buildingmain.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,88 +1,81 @@
-name: Comprehensive CI/CD Workflow
+name: Autonomous CI/CD Workflow
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
+  schedule:
+    - cron: '0 0 * * *' # Daily at midnight to check for dependency updates
 
 jobs:
-  build-and-deploy:
+  build-test-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-        # This step checks out the repository code so that the workflow can access it.
+        # Checks out the code for the build process
 
-      - name: Build Docker Image
-        uses: NyuB/self-docker-action@1.0
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          build-dir: './images/dev-env'
-          image-name: 'dev'
-          image-tag: 'latest'
-          dockerfile-path: './images/Dockerfile'
-        # This step builds a Docker image from the specified Dockerfile.
+          node-version: '14'
+        # Sets up the Node.js environment
 
-      - name: Run Docker Image
+      - name: Install Dependencies
+        run: npm install
+        # Installs project dependencies
+
+      - name: Run Tests
+        run: npm test
+        # Runs the test suite
+
+      - name: Build
+        run: npm run build
+        # Builds the project
+
+      - name: Deploy
         run: |
-          docker run --rm dev:latest echo "BRAVO"
-        # This step runs the built Docker image and executes a command inside it.
+          # Deployment commands go here
+          # This is a placeholder for your deployment script
+        env:
+          DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
+        # Deploys the project using a custom script
 
-      - name: Self-Approve GitHub Repository
-        uses: nicklegan/github-repo-self-approve-action@v1.0.0
+  check-dependencies:
+    runs-on: ubuntu-latest
+    needs: build-test-deploy
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          appid: ${{ secrets.APP_ID }}
-          privatekey: ${{ secrets.PRIVATE_KEY }}
-          installationid: ${{ secrets.INSTALLATION_ID }}
-        # This step automatically approves pull requests using a GitHub App.
+          node-version: '14'
 
-      - name: AWS CodeBuild - Run Build
-        uses: raghavbijjula/aws-codebuild-run-build@v0.0.4-beta
+      - name: Check for Dependency Updates
+        run: npx npm-check-updates -u && npm install
+        # Checks for dependency updates and updates package.json
+
+      - name: Create Pull Request for Dependency Updates
+        uses: peter-evans/create-pull-request@v3
         with:
-          project-name: ${{ secrets.PROJECT_NAME }}
-          buildspec-override: 'buildspec.yml'
-          compute-type-override: 'BUILD_GENERAL1_SMALL'
-          environment-type-override: 'LINUX_CONTAINER'
-          image-override: 'aws/codebuild/standard:5.0'
-          image-pull-credentials-type-override: 'CODEBUILD'
-          env-vars-for-codebuild: 'VAR1=value1,VAR2=value2'
-          update-interval: 10
-          update-back-off: 2
-          disable-source-override: false
-          hide-cloudwatch-logs: false
-          disable-github-env-vars: false
-        # This step runs a build on AWS CodeBuild with the specified parameters.
+          commit-message: 'Update dependencies'
+          title: 'Update dependencies'
+          body: 'This is an auto-generated PR with dependency updates.'
+          branch: 'update-dependencies'
+        # Creates a pull request with the updated package.json
 
-      - name: Auto Action Commands
-        uses: terradatum/auto-action@v1.0.12
+  auto-merge:
+    runs-on: ubuntu-latest
+    needs: check-dependencies
+    steps:
+      - name: Auto-Merge Dependency Update PR
+        uses: pascalgn/automerge-action@v0.13.1
         with:
-          command: 'shipit'
-          repo: ${{ github.repository }}
-          owner: ${{ github.repository_owner }}
-          github-api: ${{ secrets.GITHUB_API }}
-          plugins: 'npm'
-          dry-run: false
-          base-branch: 'main'
-          from: 'v1.0.0'
-          only-graduate-with-release-label: false
-          only-publish-with-release-label: true
-          name: 'GitHub Actions'
-          email: 'actions@github.com'
-          no-version-prefix: false
-          to: 'HEAD'
-          title: 'Release Notes'
-          message: 'Automated release notes update.'
-          pr: ${{ github.event.pull_request.number }}
-          use-version: 'v1.0.1'
-          pre-release: false
-          build: ${{ github.run_number }}
-          force: false
-          context: 'CI'
-          url: ${{ github.server_url }}
-          sha: ${{ github.sha }}
-          state: 'success'
-          description: 'CI build passed'
-          edit: false
-          delete: false
-        # This step executes 'auto' commands for automated versioning and release management.
-
-      - name: Deploy to Production
-        run: |
-          # Add deployment scripts here
-        # This step would contain the deployment scripts to push the build to production.
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          merge_method: squash
+          pull_request: ${{ github.event.pull_request.number }}
+        # Automatically merges the dependency update pull request
